--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,9 @@
-cmake_minimum_required(VERSION 2.8.0)
-option(RAW_VALUES_DEC "Display Raw Values in Decimal instead of Hex" OFF)
+cmake_minimum_required(VERSION 3.28.0)
+option(RAW_VALUES_DEC "Display Raw Values in Decimal instead of Hex" ON)
 project(CrazyDiskInfo CXX)
 add_executable(CrazyDiskInfo main.cpp)
 set(CMAKE_CXX_FLAGS "-Wall -std=c++11")
 SET_TARGET_PROPERTIES(CrazyDiskInfo PROPERTIES OUTPUT_NAME crazy)
 target_link_libraries(CrazyDiskInfo atasmart)
-target_link_libraries(CrazyDiskInfo tinfow)
 target_link_libraries(CrazyDiskInfo ncursesw)
 INSTALL(TARGETS CrazyDiskInfo RUNTIME DESTINATION /usr/sbin)
